--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,7 @@
+body{
+    margin:8px 0;
+}
+/*Header CSS*/
 .nav_bar{
     display: flex;
     justify-content: space-around;
@@ -16,4 +20,20 @@
 #logo img{
     height:60px;
     width:60px;
+}
+
+/*****Footer CSS*****/
+.footer{
+    background-color: #E57373;
+    margin-left: 0;
+    padding:10px 5px;
+    color: white;
+    width: 100%;
+}
+
+.foot_cont{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-evenly;
 }
