--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body{
-    margin:8px 0;
+    margin:0;
 }
 /*Header CSS*/
 .nav_bar{
@@ -22,10 +22,30 @@ body{
     width:60px;
 }
 
+/************************Main**********************************/
+.one{
+    background-color: #FAFAFA;
+    text-align: center;
+    padding:30px 0;
+}
+
+.cyclone_wiki{
+    font-family: 'Sriracha', cursive;
+    font-size: 80px;
+    color:#B71C1C;
+    margin: 0 auto;
+}
+
+.main_img{
+    width:100%;
+    margin:0;
+}
+
+
 /*****Footer CSS*****/
 .footer{
     background-color: #E57373;
-    margin-left: 0;
+    margin: auto 0 0 0;
     padding:10px 5px;
     color: white;
     width: 100%;
