--- a/css/style.css
+++ b/css/style.css
@@ -34,6 +34,7 @@ body{
     font-size: 80px;
     color:#B71C1C;
     margin: 0 auto;
+    font-weight: 500;
 }
 
 .main_img{
@@ -41,14 +42,30 @@ body{
     margin:0;
 }
 
+.cyclone1{
+    padding:20px 10px;
+    background-color: #E57373;
+    color:white;
+    font-family: 'Nanum Gothic', sans-serif;
+}
+
+.cyclone1 > h1{
+    font-size: 60px;
+    font-weight: 500;
+}
+
+.cyclone1 h1+div > p {
+    font-size:20px;
+    text-align: left;
+}
+
 
 /*****Footer CSS*****/
 .footer{
-    background-color: #E57373;
+    background-color: #FFEBEE;
     margin: auto 0 0 0;
     padding:10px 5px;
-    color: white;
-    width: 100%;
+    color: crimson;
 }
 
 .foot_cont{
