--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,7 @@ body{
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
+    font-family: 'Nanum Gothic', sans-serif;
 }
 
 .nav_content > span {
@@ -23,6 +24,7 @@ body{
 }
 
 /************************Main**********************************/
+/******************one********************/
 .one{
     background-color: #FAFAFA;
     text-align: center;
@@ -42,6 +44,8 @@ body{
     margin:0;
 }
 
+/******************Two*****************/
+
 .cyclone1{
     padding:20px 10px;
     background-color: #E57373;
@@ -59,6 +63,38 @@ body{
     text-align: left;
 }
 
+/************Three*******************/
+.facts{
+    display:grid;
+    grid-template-columns: auto;
+    grid-template-rows: 80px 500px;
+    font-family: 'Nanum Gothic', sans-serif;
+    color:#C62828;
+    grid-gap: 20px 10px;
+    padding:40px 0;
+}
+
+
+.facts_1 h1{
+    text-align: center;
+    font-size: 60px;
+    margin:10px;
+}
+
+.facts_2{
+    display:grid;
+    grid-template-columns:auto auto;
+    grid-template-rows: 240px 240px;
+    text-align: center;
+    grid-gap: 30px 0;
+}
+
+.facts_3 figure > img,
+.facts_4 figure > img,
+.facts_5 figure > img,
+.facts_6 figure > img{
+    height:190px;
+}
 
 /*****Footer CSS*****/
 .footer{
