--- a/css/style.css
+++ b/css/style.css
@@ -129,6 +129,9 @@ body{
     background-color: white;
     padding: 20px;
     border-radius: 6px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #BDBDBD;
 }
 
 .news_1 ~ section > img{
@@ -137,6 +140,37 @@ body{
     padding: 0 10px;
     width:30%;
 }
+
+/***************************Gallery**********************/
+.gal_grid{
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: 150px 400px 400px 400px 400px;
+    text-align: center;
+    grid-gap: 10px 5px;
+    background-color: #F5F5F5;
+}
+
+.gal_grid1{
+    grid-area:1/1/span 1/span 2;
+}
+
+.gal_grid2 > img,
+.gal_grid3 > img,
+.gal_grid4 > img,
+.gal_grid5 > img,
+.gal_grid6 > img,
+.gal_grid7 > img,
+.gal_grid8 > img{
+    height:370px;
+    width:90%;
+    padding:5px;
+    border-width: 1px;
+    border-style: solid;
+    border-color: #BDBDBD;
+    border-radius: 6px;
+}
+/********************************************************/
 /*****Footer CSS*****/
 .footer{
     background-color: #FFEBEE;
