--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
 body{
     margin:0;
 }
-/*Header CSS*/
+/*************************Header CSS*******************************/
 .nav_bar{
     display: flex;
     justify-content: space-around;
@@ -15,7 +15,8 @@ body{
 }
 
 .nav_content > span {
-    line-height: 4;    
+    line-height: 4;
+    padding:2.5px;    
 }
 
 .nav_content > span >a {
@@ -101,6 +102,7 @@ body{
 .facts_6 figure > img{
     height:190px;
 }
+/*************************************************/
 /****************************news*****************/
 .news_grid{
     padding:10px 10px 30px;
@@ -112,7 +114,7 @@ body{
 }
 
 .news_1 img{
-    height:240px;
+    height:90%;
     float: left;
     padding: 0 20px 0 10px;
     width:30%;
@@ -140,7 +142,7 @@ body{
     padding: 0 10px;
     width:30%;
 }
-
+/********************************************************/
 /***************************Gallery**********************/
 .gal_grid{
     display: grid;
@@ -190,16 +192,16 @@ body{
 
 .facts_11 h2,
 .facts_31 h2{
-    font-size: 50px;
+    font-size: 40px;
     color:#D32F2F;
 }
 .facts_21 h2{
-    font-size: 50px;
+    font-size: 40px;
 } 
 .facts_11 ul,
 .facts_21 ul,
 .facts_31 ul{
-    font-size: 30px;
+    font-size: 24px;
 }
 .facts_21{
     padding:20px 10px;
@@ -227,5 +229,50 @@ body{
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content: space-evenly;
+    justify-content:space-evenly;
+}
+
+@media (max-width:762px) {
+/******Index***************/
+    .nav_content{
+        flex-basis: 50%;
+}
+    
+    #logo img{
+        height:60px;
+        width:60px;
+    }
+    .cyclone_wiki{
+        font-size: 50px;
+    }
+
+    figcaption{
+        font-size: 12px;
+    }
+
+    .cyclone1>h1{
+        font-size: 40px;
+    }
+
+    .cyclone1 h1+div > p{
+        font-size: 15px;
+    }
+
+    .facts{
+        grid-template-rows: 50px 1100px;
+    }
+
+    .facts h1{
+        font-size: 40px;
+    }
+    .facts_2{
+        grid-template-columns: auto;
+    }
+
+    .facts_2 > div > figure > img {
+        width:70%;
+    }
+
+/****************************
+    
 }
