--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ body{
     color:#C62828;
     grid-gap: 20px 10px;
     padding:40px 0;
+    background-color: #FAFAFA
 }
 
 
@@ -220,17 +221,18 @@ body{
 /*******************************************************/
 /*****Footer CSS*****/
 .footer{
-    background-color: #FFEBEE;
-    margin: auto 0 0 0;
+    margin: 0 0 0 0;
     padding:20px 10px;
-    color: crimson;
+    border-top: 0.5px solid #BDBDBD;
+    background-color: white;
 }
 
 .foot_cont{
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    justify-content:space-evenly;
+    justify-content: space-evenly;
+    background-color: white;
 }
 
 @media (max-width:1149px){
